# TDF

./: Dockerfile  README.md  tdf-hq.cabal
.stack-work/: stack.sqlite3
app/: Main.hs
config/: default.env
scripts/: dev_run.sh
src/TDF/: API.hs  Config.hs  DB.hs  DTO.hs  Models.hs  Seed.hs  Server.hs
