cabal-version:      2.4
name:               tdf-hq
version:            0.1.0.0
synopsis:           TDF HQ - CRM, Scheduling, Packages, Invoicing, Inventory (skeleton)
license:            MIT
author:             TDF Records (Diego Saá)
maintainer:         tdf@example.com
build-type:         Simple

executable tdf-hq-exe
  main-is:          Main.hs
  hs-source-dirs:   app, src
  other-modules:
    TDF.API
    TDF.Config
    TDF.DB
    TDF.DTO
    TDF.Models
    TDF.Seed
    TDF.Server
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base                 >=4.14 && <5
    , aeson                >=2.0
    , bytestring
    , text
    , time
    , containers
    , persistent           >=2.14
    , persistent-template  >=2.12
    , persistent-postgresql >=2.13
    , resource-pool
    , monad-logger
    , resourcet
    , conduit
    , servant              >=0.19
    , servant-server       >=0.19
    , http-types
    , warp                 >=3.3
    , wai
    , filepath
    , directory
    , transformers
    , mtl
    , unordered-containers
    , uuid-types
    , scientific
    , safe-exceptions
    , base64-bytestring
    , directory
